loopfor.LoopFor.scala.error
Compilation error:
LoopFor:2: error: not found: value isOnBaggle
  if (isOnBaggle) {
      ^LoopFor:3: error: not found: value pickupbaggle
    pickupbaggle
    ^LoopFor:5: error: ambiguous reference to overloaded definition,
both method backward in class LoopFor of type (i: Int)Unit
and  method backward in class AbstractBuggle of type ()Unit
match expected type ?
      backward
      ^LoopFor:9: error: ambiguous reference to overloaded definition,
both method forward in class LoopFor of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
    forward
    ^