loopfor.LoopFor.scala.code
for (i <- 0 to 5) {
  if (isOnBaggle) {
    pickupbaggle
    for (j <- 0 to i) {
      backward
    }
  }
  else {
    forward
  }
}